--- a/Task_1_and_2(langchain).ipynb
+++ b/Task_1_and_2(langchain).ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNG+KE8tNnzDZrVZQMYWxOw",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNG+KE8tNnzDZrVZQMYWxOw"
     },
     "kernelspec": {
       "name": "python3",
@@ -2758,16 +2757,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Sujal-Rajvansh/Interactive-Q-A-System-Using-Llama-3.2-1B-Model-with-Hugging-Face-Integration/blob/main/Task_1_and_2(langchain).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": null,
